helpers/ssh-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ssh-proxy
  name: ssh-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ssh-proxy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: ssh-proxy
    spec:
      containers:
      - image: linuxserver/openssh-server
        name: ssh-proxy
        ports:
        - containerPort: 2222
          protocol: TCP
        volumeMounts:
        - mountPath: '/publickey'
          name: ssh-proxy-pkeys-pvc
      volumes:
      - name: ssh-proxy-pkeys-pvc
        persistentVolumeClaim:
          claimName: ssh-proxy-pkeys-pvc
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ssh-proxy
  name: ssh-proxy
spec:
  type: NodePort
  ports:
  - name: '2222'
    port: 2222
    targetPort: 2222
    nodePort: 30050
    protocol: TCP
  selector:
    io.kompose.service: ssh-proxy
status:
  loadBalancer: {}
