helpers/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: observability
  annotations:
    cert-manager.io/issuer: issuer-do
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 50M
spec:
  tls:
  - hosts:
    - grafana.growbe.ca
  rules:
  - host: grafana.growbe.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
