helpers/prm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prm-ingress
  annotations:
    cert-manager.io/issuer: issuer-do
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 50M
spec:
  tls:
  - hosts:
    - prm.growbe.ca
  rules:
  - host: prm.growbe.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
